--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,14 +1,14 @@
 /* 	core variable files */
 @import "node_modules/castlecss-core/sass/variables";
 
-/* 	Your own variables */
-@import "variables";
+
 
 /* 	rest of core files */
 @import "node_modules/castlecss-core/sass/main";
 @import "node_modules/castlecss-buttons/sass/main";
 @import "node_modules/castlecss-notifications/sass/main";
 @import "node_modules/castlecss-icons/sass/main";
+@import "node_modules/castlecss-forms/sass/main";
 
 /* 	Include your own files below this line
 	--------------------------------------
