--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,7 @@
 /* 	core variable files */
 @import "node_modules/castlecss-core/sass/variables";
 
-
+@import "variables";
 
 /* 	rest of core files */
 @import "node_modules/castlecss-core/sass/main";
